fixed ImagePollView styles on mobile screens

--- a/modules/shared/components/molecules/ImagePollGroup/ImagePollGroup.module.css
+++ b/modules/shared/components/molecules/ImagePollGroup/ImagePollGroup.module.css
@@ -1,3 +1,3 @@
 .image-poll-view {
-  @apply sm:grid sm:gap-x-2 sm:gap-y-4;
+  @apply grid gap-x-2 gap-y-4;
 }
